@@ -22,6 +22,8 @@ class Skynet
     :USE_RINGSERVER                    => true,
     :NUMBER_OF_WORKERS                 => 4,
     :WORKER_CHECK_DELAY                => 40,
+    :WORKER_MAX_MEMORY                 => 500,
+    :WORKER_MAX_PROCESSED              => 1000,
     # :GUID_GENERATOR                  => nil,
     :PERCENTAGE_OF_TASK_ONLY_WORKERS   => 0.7,
     :PERCENTAGE_OF_MASTER_ONLY_WORKERS => 0.2,
